# Project-Hibernation

./: .gitignore  CMakeLists.txt  README.md  hb_application.cpp  hb_application.h  main.cpp  project-hibernation.sln  project-hibernation.vcxproj  project-hibernation.vcxproj.filters  stdafx.cpp  stdafx.h  vcpkg.json
imgui/: imgui_impl_vulkan.h
shaders/: shader.frag  shader.vert  shader.vert.spv
source/: hb_application.cpp  hb_application.h  hb_block_world.cpp  hb_block_world.h  hb_frame_stats.cpp  hb_frame_stats.h  hb_frame_stats_macros.h  hb_image_resources.cpp  hb_image_resources.h  hb_input.cpp  hb_input.h  hb_resource_path.cpp  hb_resource_path.h  hb_vulkan_renderer.cpp  hb_vulkan_renderer.h  hb_window.cpp  hb_window.h  main.cpp  stdafx.h
